<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Randomons</string>
    <string name="lvl">lvl</string>
    <string name="name">name</string>
    <string name="description">description</string>
    <string name="heal_randomons">Heal Randomons</string>
    <string name="clean">Clean</string>
    <string name="buy">Buy</string>
    <string name="saldo">Saldo: 0</string>
    <string name="total">Total: 0</string>
    <string name="register">Registar</string>
    <string name="login">Login</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="title_activity_login">Login no Randomons</string>
    <string name="user_name">Username</string>
    <string name="user_password_confirmation">Confimar Password</string>
    <string name="register_disclaimer">Ao registares aceitas os termos e condições de serviço.</string>
    <string name="title_activity_register">Registar nos Randomons</string>
    <string name="user_name">Username</string>
    <string name="user_points">1975292</string>
    <string name="randomon_details">Randomon Details:</string>
    <string name="evolution">Evolution</string>

    <color name="white">#ffffffff</color>
    <color name="black">#000000</color>
    <color name="light_blue">#00a7e5</color>
    <color name="transparent_black">#35000000</color>
</resources>
